--- a/5-random-user/index.html
+++ b/5-random-user/index.html
@@ -21,6 +21,8 @@
         <div class="description">
             <div>Email: <span id="email">andrea.sørensen@example.com</span></div>
             <div>City: <span id="city">nr åby</span></div>
+            <div>Street: <span id="number>788</span>
+                         <span id="name">Rockford</span></div>
         </div>
         <div class="footer">
             <button id="btn">Next User!</button>
